# decomind-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  main.py
data/: seccion_signal.json  stock_age.json
docs/: architecture.md  arquitectura-resumen.md  business-case.md  console-navigation.md  day-by-day.md  faq-tecnico.md  google-cloud-manual.md  isolation-rules.md  system-overview.md
evals/: backtest.py  backtest_baseline.json  baseline.json  bias_matrix.json  bias_matrix.py  dataset.py  run.py
frontend/: .dockerignore  Dockerfile  app.py  requirements.txt
frontend/static/: app.js  index.html  style.css
mcp_servers/: _guardrails.py  _runtime.py
mcp_servers/catastro/: server.py
mcp_servers/dossier_pdf/: charts.py  server.py
mcp_servers/geocoding/: server.py
mcp_servers/market_research/: data.py  data_ipv.py  data_mitma.py  features_parser.py  hedonic.py  server.py
mcp_servers/notariado/: server.py
mcp_servers/renovation/: rates.py  server.py
mcp_servers/seccion_censal/: server.py
mcp_servers/zona_valor/: server.py
scripts/: build_seccion_signal.py  build_stock_age.py  debug_lookup.py  demo_set.py  deploy_frontend.ps1  deploy_mcps.ps1  deploy_valuation_api.ps1  dump_mcp_urls.ps1  grant_invoker.ps1  inspect_mitma.py  md_to_pdf.py  parse_mitma.py  probe_catastro.py  probe_notariado.py  probe_valor_referencia.py  snapshot_notariado.py  test_pdf.py
valuation_api/: Dockerfile  app.py  engine.py  requirements.txt  test_confidence_band.py  test_ipv_contract.py
