[project]
name = "decomind-agent"
version = "0.1.0"
description = "Decomind Agent — Google for Startups AI Agents Challenge (Track 3 Refactor)"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.5.0",
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.70.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "mcp_servers*"]

[tool.ruff]
line-length = 100
target-version = "py311"
